overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -37,15 +37,18 @@ html {
       html #team .team-box .card {
         width: 50%; } }
 
-h1, h2, h3, h4, h5, h6 {
-  text-align: center;
-  font-weight: 600; }
+body {
+  overflow-x: hidden; }
 
 section {
   padding: 5rem 0; }
 
 section:first-child {
   padding: 0; }
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+  font-weight: 600; }
 
 /* HEADER SECTION */
 #header {
